<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cviestilista.ui.home.RegistrosTotalesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_registros_totales">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.cviestilista.ui.home.RegistrosTotalesFragment"
        android:label="@string/home_second">
        <!--tools:layout="@layout/fragment_home_second"-->
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cviestilista.ui.gallery.ServiciosHoyFragment"
        android:label="@string/menu_registroNuevo"
        tools:layout="@layout/fragment_registros_hoy" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cviestilista.ui.slideshow.AgregarServicioFragment"
        android:label="@string/menu_agregarServicio"
        tools:layout="@layout/fragment_agregar_servicio" />
</navigation>