<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Obejtos.Anotacion_dialogo_estilista_Fragment"
    android:elevation="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="800dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal"
        >


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="320dp"
            android:layout_height="521dp"
            android:layout_marginHorizontal="20dp"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginVertical="1dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:elevation="5dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Tus anotaciones"
                        android:textSize="30dp"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                </LinearLayout>

                <EditText
                    android:id="@+id/dialogNombrePerro"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center"
                    android:hint="@string/nombrePerro" />



                <EditText
                    android:id="@+id/dialogNombreResponsable"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"
                    android:hint="@string/responsable"
                    />
                <EditText
                    android:id="@+id/dialogServicio"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"
                    android:hint="@string/servicio"
                    />

                <EditText
                    android:id="@+id/dialogComentarios"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"
                    android:hint="@string/comentario" />

                <EditText
                    android:id="@+id/dialogNumTel"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"
                    android:hint="@string/numTel" />

                <EditText
                    android:id="@+id/dialogPrecio"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="center"
                    android:hint="@string/precio" />

                <Button
                    android:id="@+id/btnActualizarAnotacionEstilista"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/botoncircular"
                    android:text="@string/actualizar"
                    android:layout_gravity="center"
                    android:textColor="#FFFFFF"
                    />

            </LinearLayout>


        </ScrollView>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>
