<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.AgregarServicioFragment"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <androidx.cardview.widget.CardView
                android:layout_width="322dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="1dp"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="156dp"
                        android:layout_height="152dp"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="5dp"
                        android:src="@mipmap/centro" />

                    <EditText

                        android:id="@+id/txtResponsable"
                        android:layout_width="257dp"
                        android:layout_height="47dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:ems="10"
                        android:hint="nombre del responsable"
                        android:inputType="textPersonName"
                        android:textColorHighlight="#092B81"
                        android:textColorLink="#092283"

                        android:textCursorDrawable="@drawable/botoncircular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.605"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <EditText

                        android:id="@+id/txtNomMas"
                        android:layout_width="255dp"
                        android:layout_height="47dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:ems="10"
                        android:hint="nombre de la mascota"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.601"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <EditText
                        android:id="@+id/txtNumeroTel"
                        android:layout_width="253dp"
                        android:layout_height="47dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:ems="10"

                        android:hint="numero de contacto"
                        android:inputType="phone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.588"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtResponsable" />


                    <EditText
                        android:id="@+id/txtComentarios"
                        android:layout_width="251dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/espe_servicio"
                        android:inputType="textMultiLine" />


                    <EditText
                        android:id="@+id/txtCostoItem"
                        android:layout_width="251dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/precio"
                        android:inputType="number" />

                    <CheckBox
                        android:id="@+id/chbCorte"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:text="Corte" />


                    <CheckBox
                        android:id="@+id/chbxBanio"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:text="Baño" />


                    <CheckBox
                        android:id="@+id/chbxCorteBanio"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:text="Corte/Baño" />

                    <Button
                        android:id="@+id/btnRegistro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/botoncircular"
                        android:backgroundTint="#032A7E"
                        android:text="@string/agregar"
                        android:textColor="#F8F5F5"
                        android:textColorHighlight="#EA0909" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>